--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.2.2",
     "@expo-google-fonts/dm-serif-display": "^0.2.2",
+    "@react-native-firebase/app": "^14.9.1",
+    "@react-native-firebase/auth": "^14.9.1",
+    "@react-native-firebase/firestore": "^14.9.1",
+    "@react-native-firebase/storage": "^14.9.1",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
+    "expo-linear-gradient": "~11.0.3",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
