--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -232,6 +232,10 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation ("androidx.browser:browser:1.3.0"){
+        force = true
+    }
 }
 
 // Run this once to be able to run the application with BUCK
