--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "@types/react": "17.0.43"
+  }
 }
