--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/auth": "^14.9.1",
     "@react-native-firebase/firestore": "^14.9.1",
     "@react-native-firebase/storage": "^14.9.1",
+    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "expo": "~44.0.2",
